# Annotation-Check

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
prototype/: create_vid.py  split_vid.py
src/: annotationCheck.cc  annotationCheck.h  finishedAnnotation.h  main.cc  main2.cc  run
src/tools/: splitVideoTool.cc
